--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -1,6 +1,9 @@
 .layout {
-    height: 2rem;
-    background: lightgrey;
-    color: black;
+    .header, .footer {
+        display: flex;
+        height: 3rem;
+        background: lightgrey;
+        color: black;
+    }
 
 }
