--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -1,20 +1,25 @@
 .layout {
+    position: relative;
     display: flex;
+    width: 100vw;
+    height: 100vh;
+    min-height: 100vh;
     flex-direction: column;
     align-items: stretch;
     .header {
-        z-index: 10;
         position: fixed;
+        display: flex;
+        z-index: 10;
+        width: 100vw;
         top: 0;
         left: 0;
         right: 0;
-        display: flex;
         height: 3rem;
         background: black;
         color: white;
         display: flex;
         align-items: center;
-        justify-content: space-between;
+        justify-content: flex-end;
         a {
             padding: 0.5rem;
             font-size: 1rem;
@@ -24,13 +29,46 @@
                 color: grey;
             }
         }
+        .title {
+            height: 3rem;
+            width: 7rem;
+            display: flex;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+        .nav-toggle {
+            position: absolute;
+            right: 0;
+            top: 0;
+            display: none;
+            justify-content: center;
+            align-items: center;
+            background: none;
+            border: none;
+            font-size: 2rem;
+            padding-bottom: 0.5rem;
+            color: white;
+            &:hover {
+                color: grey;
+            }
+        }
     }
     .main {
+        width: 100vw;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
         margin-top: 3rem;
+        padding: 1rem 0 1rem 0;
     }
     .footer {
+        width: 100vw;
         display: flex;
         height: 3rem;
         background: black;
@@ -48,6 +86,38 @@
             }
         }
     }
+}
 
-
+@media (max-width: 30rem) {
+    .layout {
+        .header {
+            transition: 0.25s;
+            .nav-links {
+                opacity: 0;
+                visibility: hidden;
+            }
+            .nav-toggle {
+                display: flex;
+            }
+            &.open {
+                height: 100vh;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+                .nav-links {
+                    margin-top: 3rem;
+                    transition: opacity 0.5s;
+                    opacity: 1;
+                    visibility: visible;
+                    width: 100%;
+                    border-style: solid none none none;
+                    border-width: 1px;
+                    border-color: white;
+                    align-items: flex-start;
+                    display: flex;
+                    flex-direction: column;
+                }
+            }
+        }
+    }
 }
