--- a/src/scss/blogPage.scss
+++ b/src/scss/blogPage.scss
@@ -1,8 +1,30 @@
-.aboutPage {
+.blogPage {
     display: flex;
-    flex-direction: column;
+    flex-flow: row wrap;
     justify-content: center;
-    align-items: center;
-    width: 40rem;
+    width: 70rem;
     max-width: 95vw;
+    .tile {
+        display: flex;
+        flex-direction: column;
+        width: 30rem;
+        max-width: 90vw;
+        min-height: 10rem;
+        border-radius: 10px;
+        border-style: solid;
+        border-color: grey;
+        margin: 1rem;
+        padding: 1rem;
+        cursor: pointer;
+        a {
+            height: 100%;
+            width: 100%;
+            text-decoration: none;
+            color: black;
+        }
+
+        &:hover {
+            background: grey;
+        }
+    }
 }
